overview: Allow dragging on window title.

This was a regression. Reparent the views tree so the title view is a
child of the shield button.

Test: manual
Bug: 897763
Change-Id: I69a9468fbf58c95ee65b2795844f0b8fd32112ae
Reviewed-on: https://chromium-review.googlesource.com/c/1298615
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602877}
Former-commit-id: 34dc64bd9a21626380ee6242becd4ffa47e6b198